# MAI_OOP_1

./: CMakeLists.txt  README.md  main.cpp
function/: function.cpp  function.hpp
task1/: CMakeLists.txt
task1/src/function/: function.hpp
task1/task/: func.cpp  main.cpp
task1/tests/: unit.cpp
tests/: unit.cpp
